# tk

./: Cargo.toml  README.md  renovate.json5  spec.ja.md  spec.md
.agents/skills/tk-release/: SKILL.md
.agents/skills/tk-release/agents/: openai.yaml
.agents/skills/tk-release/references/: release-checklist.md
.claude/skills/: tk-release
.github/workflows/: ci.yml  release.yml  workflow-lint.yml
packaging/homebrew/: tk.rb
skills/tk-task-list/: SKILL.md
skills/tk-task-list/agents/: openai.yaml
skills/tk-task-list/references/: command-reference.md
src/: app.rs  cli.rs  error.rs  main.rs  model.rs  output.rs  storage.rs  watch.rs
tests/: cli.rs
